Fix: Spacing inside sticky section in Sidebar

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1004,7 +1004,7 @@ ul.dropdown-options {
     position: absolute;
     left: 22px;
     width: 250px;
-    top: 188px;
+    top: 164px;
     cursor: pointer;
 }
 
